# glean-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  FILTERING.md  GENERIC_SETUP.md  GHCR_PERMISSION_FIX.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  MARKETING.md  PUBLISHING.md  README.md  SECURITY.md  SIMPLIFIED_STRUCTURE.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  glean-mcp-server.code-workspace  mcp-settings-example.json  pyproject.toml  requirements.txt  test_server.py
.github/workflows/: docker-publish.yml  release.yml
docs/: COOKIES.md  TOKEN_BASED_AUTH.md
examples/: simple_usage.py
scripts/: check-cookies.py  check-token.py  cookie-reminder.py  docker_happy_path_search.py  docker_mcp_smoke_test.py  extract-cookies-from-curl.py  happy_path_search.py  interactive-cookie-renewal.py  run-glean-mcp.sh  test_and_filter.py  test_docker_search_lighthouse.py  test_read_document.py  test_research.py  test_search.py  update-cookies.py
src/: glean_client.py  glean_mcp_server.py
src/glean_mcp/: __init__.py  api.py  cookie_client.py  glean_client.py  glean_filter.py  server.py  token_client.py
tests/: conftest.py  test_public_api.py
web/: index.html
