[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glean-mcp"
version = "0.1.0"
description = "Python client + MCP server adapter for Glean (search, chat, read documents)."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Alan Shum"}
]
requires-python = ">=3.9"
keywords = ["glean", "mcp", "model-context-protocol", "search"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "httpx>=0.25.0,<0.28.0",
  "pydantic>=2.0.0,<3",
  "python-dotenv>=1.0.0,<2",
  "mcp>=0.9.0,<1.0.0"
]

[project.urls]
Homepage = "https://github.com/alankyshum/glean-mcp-server"
Repository = "https://github.com/alankyshum/glean-mcp-server"
Issues = "https://github.com/alankyshum/glean-mcp-server/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"glean_mcp" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
